--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.TextFlow?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaos.guetzli.gui.Action">
       <children>
@@ -12,7 +11,7 @@
       <Button layoutX="6.0" layoutY="95.0" mnemonicParsing="false" onAction="#transform" prefHeight="27.0" prefWidth="83.0" text="Transform" />
       <Label fx:id="path" layoutX="6.0" layoutY="42.0" prefHeight="27.0" prefWidth="440.0" />
       <Separator layoutX="6.0" layoutY="78.0" prefHeight="5.0" prefWidth="440.0" />
-      <TextFlow fx:id="flow" layoutX="6.0" layoutY="132.0" prefHeight="361.0" prefWidth="440.0" style="-fx-border-width: 1; -fx-border-color: blue;" />
       <Button layoutX="102.0" layoutY="7.0" mnemonicParsing="false" onAction="#chooseDir" prefHeight="27.0" prefWidth="83.0" text="Open Dir" />
+      <Label fx:id="result" layoutX="6.0" layoutY="145.0" prefHeight="349.0" prefWidth="440.0" style="-fx-border-color: black;" />
    </children>
 </Pane>
